[project]
name = "call-me-maybe"
version = "0.1.0"
description = "LLM function calling via constrained JSON decoding"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flake8>=7.3.0",
    "mypy>=1.20.0",
    "numpy>=2.2.6",
    "pydantic>=2.12.5",
    "llm-sdk @ file://${PROJECT_ROOT}/llm_sdk",
]
